Home - Absatz Behandlungen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -195,8 +195,11 @@ import { Icon } from "astro-icon";
           imgPath="img/massage3-opt.jpg"
           href="/massage/#sport"
           title="Sportmassage"
-          body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen.</p>"
-        />
+          body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen.</p>
+        </div>
+
+        <p class="absatz"></p>
+
         <Card
           imgPath="img/Fussreflexzonenmassage.jpg"
           href="/massage/#fussrefelx"
