Home - Behandlungen Absatz Korrektur

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,7 +178,8 @@ import { Icon } from "astro-icon";
     <!-- cards -->
     <div class="cards">
       <h1>Behandlungen</h1>
-      <div class="card-row">
+
+     <div class="card-row">
         <Card
           imgPath="img/massage1-opt.jpg"
           href="/massage/#classic"
@@ -195,11 +196,13 @@ import { Icon } from "astro-icon";
           imgPath="img/massage3-opt.jpg"
           href="/massage/#sport"
           title="Sportmassage"
-          body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen.</p>
+          body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen.</p>"
+        />
         </div>
 
         <p class="absatz"></p>
 
+     <div class="card-row">
         <Card
           imgPath="img/Fussreflexzonenmassage.jpg"
           href="/massage/#fussrefelx"
@@ -218,6 +221,7 @@ import { Icon } from "astro-icon";
           title="Rebalancing"
           body="Rebalancing ist eine ganzheitliche, integrative Massage- und Körpertherapie. Die Methode kombiniert auf einzigartige Weise achtsame Berührung, gezielte manuelle Arbeit am faszialen Bindegewebe (Striche), Gespräche, Gelenklockerungen (Joint Release) sowie die Schulung und Verfeinerung der Körperwahrnehmung durch sogenanntes Körperlesen erbessern."
         />
+        </div>
       </div>
     </div>
     <!-- Prices -->
