Neues Bild Fussreflexzone

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -204,8 +204,8 @@ import { Icon } from "astro-icon";
 
      <div class="card-row">
         <Card
-          imgPath="img/Fussreflexzonenmassage.jpg"
-          href="/massage/#fussrefelx"
+          imgPath="img/fussreflexzonenmassage2.jpg"
+          href="/massage/#fussrefelxzonen"
           title="Fussreflexzonen Massage"
           body="Die Fussmassage kann das allgemeine Wohlbefinden im ganzen Körper verbessern. Das liegt daran, dass die Reflexzonentherapie entspannend wirkt und Blockaden im ganzen Körper lösen kann. Gerade bei schlechter Stimmung oder psychischen Belastungen zeigt sich die Reflexzonenmassage deshalb als positiv."
         />
