--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -187,13 +187,13 @@ import { Icon } from "astro-icon";
           body="Die Klassische Massage ist eine äusserliche, manuelle Behandlung zur Verbesserung/Beseitigung und Prävention von Beschwerden im Bereich des Bewegungsapparates (Muskeln, Sehnen, Bänder, Gelenke, und Nerven) und zur psychischen Entspannung."
         />
         <Card
-          imgPath="img/massage2-opt.jpg"
+          imgPath="img/entspannungsmassage.jpg"
           href="/massage/#relaxing"
           title="Entspannungsmassage"
           body="Als Entspannungsmassage wird eine Massage bezeichnet, die nicht aus medizinischen Gründen durchgeführt wird, sondern ausschließlich der Entspannung dient. Sie dient vor allem zum Abbau von Stress auf geistiger und körperlicher Ebene und zur Steigerung des Wohlbefindens."
         />
         <Card
-          imgPath="img/massage3-opt.jpg"
+          imgPath="img/sportmassage.jpg"
           href="/massage/#sport"
           title="Sportmassage"
           body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen.</p>"
@@ -205,7 +205,7 @@ import { Icon } from "astro-icon";
      <div class="card-row">
         <Card
           imgPath="img/fussreflexzonenmassage2.jpg"
-          href="/massage/#fussrefelxzonen"
+          href="/massage/#fussreflexzonen"
           title="Fussreflexzonen Massage"
           body="Die Fussmassage kann das allgemeine Wohlbefinden im ganzen Körper verbessern. Das liegt daran, dass die Reflexzonentherapie entspannend wirkt und Blockaden im ganzen Körper lösen kann. Gerade bei schlechter Stimmung oder psychischen Belastungen zeigt sich die Reflexzonenmassage deshalb als positiv."
         />
