--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { Icon } from "astro-icon";
     <BannerHome />
     <!-- contacts -->
     <div id="contacts" class="contacts">
-      <h1>Kontakte</h1>
+      <h1>Kontakt</h1>
       
       <div class="addr-place">
                   <p>
