--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -33,7 +33,7 @@ import Footer from "../components/Footer.astro";
           hrefRev="#"
           titleRev="Entspannungsmassage"
           bodyRev1={[
-            "Als Entspannungsmassage wird eine Massage bezeichnet, die nicht aus medizinischen Gründen durchgeführt wird, sondern ausschliesslich der Entspannung dient. Sie dient vor allem zum Abbau von Stress auf geistiger und körperlicher Ebene und zur Steigerung des Wohlbefindens.</p></br><p>Bei einer Entspannungsmassage, die man auch Anti-Stress oder Relax Massage nennt, werden gleichmässig langsame und rhythmische Bewegungen vorgenommen, mit dessen Hilfe sich Geist, Körper und Seele wieder erholen können.",
+            "Als Entspannungsmassage wird eine Massage bezeichnet, die nicht aus medizinischen Gründen durchgeführt wird, sondern ausschliesslich der Entspannung dient. Sie dient vor allem zum Abbau von Stress auf geistiger und körperlicher Ebene und zur Steigerung des Wohlbefindens. Bei einer Entspannungsmassage, die man auch Anti-Stress oder Relax Massage nennt, werden gleichmässig langsame und rhythmische Bewegungen vorgenommen, mit dessen Hilfe sich Geist, Körper und Seele wieder erholen können.",
           ]}
           bodyRev2="<p>Dabei können unterschiedliche Massagetechniken zum Einsatz kommen. Bei einer Entspannungsmassage besteht das Ziel</p><ul><li>Verspannungen zu lösen</li><li>Muskelermüdung zu lindern</li><li>Müdigkeit abzubauen</li><li>Sich zu entspannen</li><li>Den Muskeltonus zu erhöhen oder zu verringern</li><li>Schmerzen zu reduzieren</li><li>Verletzungen zu beseitigen</li><li>Die Durchblutung und den Lymphfluss zu verbessern</li><li>den Stoffwechsel beschleunigen</li><li>den Hautzustand zu verbessern</li><li>Den Körper zu verjüngen.</li></ul><p>Die Indikationen umfassen Gelenkerkrankungen (Arthrose, Osteochondrose und andere), Muskelatonie, chronische Müdigkeit, Schmerzen, erhöhte Nervenreizbarkeit, Schlafstörungen, Neurosen, Stress, Depressionen, Übergewicht, Cellulite, Fibrose, Ödeme, Hypertonizität der Muskeln.</p>"
         />
@@ -152,9 +152,12 @@ import Footer from "../components/Footer.astro";
           <div>
             <h3>In den Praxisen in Kloten</h3>
             <div class="prices">
-              <p>Klassische Massage ab 120 CHF pro 60 Minuten</p>
-              <p>Entspannungsmassage ab 120 CHF pro 60 Minuten</p>
-              <p>Sportmassage ab 120 CHF pro 60 Minuten</p>
+              <p>Klassische Massage ab 128 CHF pro 60 Minuten</p>
+              <p>Entspannungsmassage ab 128 CHF pro 60 Minuten</p>
+              <p>Sportmassage ab 128 CHF pro 60 Minuten</p>
+              <p>Fussreflexzonen Massage ab 128 CHF pro 60 Minuten</p>
+              <p>Manuelle Lymphdrainage ab 128 CHF pro 60 Minuten</p>
+              <p>Rebalancing ab 128 CHF pro 60 Minuten</p>
             </div>
           </div>
           <div>
@@ -163,6 +166,9 @@ import Footer from "../components/Footer.astro";
               <p>Klassische Massage 100 CHF pro 60 Minuten</p>
               <p>Entspannungsmassage 100 CHF pro 60 Minuten</p>
               <p>Sportmassage 100 CHF pro 60 Minuten</p>
+              <p>Fussreflexzonen Massage ab 100 CHF pro 60 Minuten</p>
+              <p>Manuelle Lymphdrainage ab 100 CHF pro 60 Minuten</p>
+              <p>Rebalancing ab 100 CHF pro 60 Minuten</p>
             </div>
           </div>
         </div>
@@ -174,8 +180,8 @@ import Footer from "../components/Footer.astro";
           <p>
             Ein Grossteil der Krankenkassen übernimmt im Rahmen einer
             Zusatzversicherung die Kosten einer Massage voll oder zum Teil.
-            Bitte erkundigen Sie sich vor der Behandlung bei Ihrer Versicherung.
-          </p>
+            Bitte erkundigen Sie sich vor der Behandlung bei Ihrer Versicherung.</p> 
+            <p>Sie können dazu folgende ZSR-Nummer angeben: X916164</p>
         </div>
       </div>
     </div>
