--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="/about/">Über mich</a></li>
     <li><a href="/massage/">Massage</a></li>
-    <li><a href="/contacts/">Kontakte</a></li>
+    <li><a href="/contacts/">Kontakt</a></li>
   </ul>
   <div>
     <div class="certificates">
