--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -9,7 +9,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="/about">Über mich</a></li>
     <li><a href="/massage">Massage</a></li>
-    <li><a href="/contacts">Kontakte</a></li>
+    <li><a href="/contacts">Kontakt</a></li>
   </ul>
 
   <div class="hamburger-menu">
@@ -18,7 +18,7 @@
       <a id="homeLink" href="/">Home</a>
       <a id="aboutLink" href="/about/">Über mich</a>
       <a id="massageLink" href="/massage/">Massage</a>
-      <a id="contactLink" href="/contacts/">Kontakte</a>
+      <a id="contactLink" href="/contacts/">Kontakt</a>
     </div>
 
     <button id="openBtn" class="openbtn">☰</button>
