--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -12,11 +12,11 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
     <Banner />
     <div class="contacts">
       <div class="page-title">
-        <h1>Kontakte</h1>
+        <h1>Kontakt</h1>
       </div>
 
       <div id="personal-contact" class="contact-form">
-        <h2>Für Buchung und Fragen</h2>
+        <h2>Terminbuchung und Fragen</h2>
         <form name="contact-general" method="POST" data-netlify="true">
           <input type="hidden" name="subject" value="Anfrage Massage" />
           <p>
@@ -55,7 +55,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
               </div>
               <p>
                 <a
-                  href="https://maps.app.goo.gl/SCCjyYHtdvUu1VrC8"
+                  href="https://maps.app.goo.gl/8VGnGphAdCX1By7d6"
                   target="_blank"
                 >
                   Schaffhauserstrasse 22
@@ -63,7 +63,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
               </p>
               <p>
                 <a
-                  href="https://maps.app.goo.gl/SCCjyYHtdvUu1VrC8"
+                  href="https://maps.app.goo.gl/8VGnGphAdCX1By7d6"
                   target="_blank"
                 >
                   8302 Kloten
@@ -107,12 +107,12 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
                 <p>in Weiach</p>
               </div>
               <p>
-                <a href="https://goo.gl/maps/SronJErekN9ETXpL9" target="_blank">
+                <a href="https://maps.app.goo.gl/KahWbCEU2jZgnRht6" target="_blank">
                   Im See 3
                 </a>
               </p>
               <p>
-                <a href="https://goo.gl/maps/SronJErekN9ETXpL9" target="_blank">
+                <a href="https://maps.app.goo.gl/KahWbCEU2jZgnRht6" target="_blank">
                   8187 Weiach
                 </a>
               </p>
