--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -313,7 +313,7 @@ const dataDesktop = json;
     width: 100%;
     height: 100%;
     max-width: 1020px;
-    position: absolute;
+    position: relative;
     transition: all 0.5s;
     display: flex;
     gap: 16px;
