--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -306,14 +306,14 @@ const dataDesktop = json;
     /* max-width: 800px; */
     min-height: 370px;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
   }
 
   .slide {
     width: 100%;
     height: 100%;
     max-width: 1020px;
-    position: relative;
+    position: absolute;
     transition: all 0.5s;
     display: flex;
     gap: 16px;
