--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -306,7 +306,7 @@ const dataDesktop = json;
     /* max-width: 800px; */
     min-height: 370px;
     position: relative;
-    overflow: auto;
+    overflow: hidden;
   }
 
   .slide {
