Kontraindikation, Footer, Preise

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,9 +34,8 @@
   </div>
 
   <p class="copyright">
-    <span>Copyright ©2023 All rights reserved |</span>
+    <span>Copyright ©2026 VitaLena. All rights reserved |</span>
     <a href="https://troopl.com/iaborisova" target="_blank">
-      This website is made by Irina Borisova
     </a>
   </p>
 </div>
