--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -231,23 +231,17 @@ import { Icon } from "astro-icon";
         <div>
           <h2>In den Praxisen in Kloten</h2>
           <div class="prices">
-            <p>Klassische Massage ab 128 CHF pro 60 Minuten</p>
-            <p>Entspannungsmassage ab 128 CHF pro 60 Minuten</p>
-            <p>Sportmassage ab 128 CHF pro 60 Minuten</p>
-            <p>Fussreflexzonen Massage ab 128 CHF pro 60 Minuten</p>
-            <p>Manuelle Lymphdrainage ab 128 CHF pro 60 Minuten</p>
-            <p>Rebalancing ab 128 CHF pro 60 Minuten</p>
+            <p>Massage 60 Minuten ab 128 CHF</p>
+            <p>Massage 30 Minuten ab 70 CHF</p>
+            <p>Hausbesuch ab 2 Personen – Preis auf Anfrage </p>
           </div>
         </div>
         <div>
           <h2>Im Praxisraum in Weiach</h2>
           <div class="prices">
-            <p>Klassische Massage 100 CHF pro 60 Minuten</p>
-            <p>Entspannungsmassage 100 CHF pro 60 Minuten</p>
-            <p>Sportmassage 100 CHF pro 60 Minuten</p>
-            <p>Fussreflexzonen Massage ab 100 CHF pro 60 Minuten</p>
-            <p>Manuelle Lymphdrainage ab 100 CHF pro 60 Minuten</p>
-            <p>Rebalancing ab 100 CHF pro 60 Minuten</p>
+            <p>Massage 60 Minuten 110 CHF</p>
+            <p>Massage 30 Minuten 60 CHF</p>
+            <p>Hausbesuch ab 2 Personen – Preis auf Anfrage </p>
           </div>
         </div>
       </div>
