--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -86,62 +86,54 @@ import Footer from "../components/Footer.astro";
       <!-- contraindications -->
       <div class="contradict-section">
         <h2>Kontraindikationen</h2>
+        <p>Bei der Massage gibt es verschiedene Kontraindikationen, die beachtet werden müssen, um Risiken und Komplikationen zu vermeiden.</p>
 
         <h3>Absolute Kontraindikationen</h3>
 
-        <p>Bei folgenden Fällen darf generell nicht massiert werden:</p>
+        <p>In den folgenden Fällen darf generell nicht massiert werden:</p>
         <ul>
+          <li>akute Entzündungen und Infektionen</li>
           <li>fieberhafte Erkrankungen</li>
-          <li>Entzündungen jeglicher Art</li>
-          <li>
-            akute Thrombose, Thrombophlebitis, arterielle Durchblutungsstörungen
-          </li>
-          <li>
-            frischer Herzinfarkt, Herzmuskelschwäche und andere schwere
-            Herzerkrankungen
-          </li>
+          <li>kardiovasculäre Erkrankungen</li>
+          <li>akute Thrombose und Emboliegefahr</li>
+          <li>Blutgerinnungsstörungen</li>
+          <li>offene Wunden, Hautinfektionen, Geschwüre, Verbrennungen</li>
           <li>Krebserkrankungen, Tumore</li>
-          <li>
-            frische Verletzungen des Bewegungsapparates (Knochenbrüche,
-            Verstauchungen, Muskelzerrungen, Muskelrisse);
-          </li>
-          <li>Hauterkrankungen im akuten Stadium,</li>
-          <li>
-            Verletzungen der Integrität der Haut (Geschwüre, Verbrennungen,
-            Wunden),
-          </li>
-          <li>Infektionenskrankheiten</li>
           <li>gewisse neurologische Erkrankungen</li>
-          <li>
-            während der ersten drei Schwangerschaftsmonaten sowie bei
-            Abortgefahr (Fehlgeburt)
-          </li>
+          <li>psychische Erkrankungen</li>
+          <li>während der ersten drei Schwangerschaftsmonaten sowie bei Abortgefahr (Fehlgeburt)</li>
         </ul>
 
         <h3>Relative Kontraindikationen</h3>
         <p>
+          Erfordern eine individuelle Beurteilung und können unter bestimmten Umständen behandelt werden. 
+          
           Mit diesem Begriff definiert man Situationen, in denen die Massage nur
           eingeschränkt möglich ist, z.B. Beinvenenthrombose, bei der eine
           Schulter-Arm Massage durchgeführt werden kann.
+
+          <b>Schwangerschaft:</b> Massagenkönnen während der SChwangerschaft unter bestimmten Bedingungen durchgeführt werden, sollten jedoch vorher mit einem Arzt besprochen werden.
+
+          <b>Medikamenteneinnahme:</b> Bestimmte Medikamente, wie Blutverdünner, können das Risiko von Blutungen während einer Massage erhöhen. Es ist wichtig, den Therapeuten über alle eingenommenen Medikamente zu informieren.
         </p>
 
         <div class="contradict-bold">
           <p>
             <b
-              >Diese Liste ist nicht abschliessend. Bei Unklarheiten ist eine
-              Rücksprache mit dem Arzt angezeigt.</b
+              >Diese Liste ist nicht abschliessend.</b
             >
           </p>
         </div>
 
+        <p>Vor einer Massage empfehle ich, sich über mögliche Kontraindikationen 
+          zu informieren und bei gesundheitlichen Bedenken gegebenenfalls einen Arzt zu konsultieren,.</p>
+        
         <p>
           Sollten Sie in der Vergangenheit an einer der oben aufgelisteten
-          Krankheiten / Beschwerden gelitten haben oder leiden Sie momentan
-          darunter, möchte ich Sie bitten, mich zum Zeitpunkt der
-          Terminvereinbarung darüber zu informieren. Bitte setzen Sie mich
-          spätestens während der Anamnese in Kenntnis über allfällige
-          Krankheiten/Beschwerden und über vergangene und operative Eingriffe
-          und Unfälle.
+          Krankheiten / Beschwerden gelitten haben oder aktuell darunter leiden,
+          bitte ich Sie, mich bereits bei der Terminvereinbarung darüber zu informieren.
+          Bitte setzen Sie mich spätestens während der Anamnese in Kenntnis über allfällige
+          Erkrankungen, Beschwerden sowie über vergangene Operationen oder Unfälle.
         </p>
       </div>
 
