--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -233,7 +233,6 @@ import { Icon } from "astro-icon";
           <div class="prices">
             <p>Massage 60 Minuten ab 128 CHF</p>
             <p>Massage 30 Minuten ab 70 CHF</p>
-            <p>Hausbesuch ab 2 Personen – Preis auf Anfrage </p>
           </div>
         </div>
         <div>
@@ -241,9 +240,9 @@ import { Icon } from "astro-icon";
           <div class="prices">
             <p>Massage 60 Minuten 110 CHF</p>
             <p>Massage 30 Minuten 60 CHF</p>
-            <p>Hausbesuch ab 2 Personen – Preis auf Anfrage </p>
           </div>
         </div>
+            <p>Hausbesuche ab 2 Personen – Preis auf Anfrage </p>
       </div>
 
       <p>Die Behandlungsdauer versteht sich inklusive Vor- und Nachgespräch.</p>
