--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -105,31 +105,30 @@ import Footer from "../components/Footer.astro";
         </ul>
 
         <h3>Relative Kontraindikationen</h3>
-        <p>
-          Erfordern eine individuelle Beurteilung und können unter bestimmten Umständen behandelt werden. 
+        
+          <p>Erfordern eine individuelle Beurteilung und können unter bestimmten Umständen behandelt werden.</p> 
           
-          Mit diesem Begriff definiert man Situationen, in denen die Massage nur
+          <p>Mit diesem Begriff definiert man Situationen, in denen die Massage nur
           eingeschränkt möglich ist, z.B. Beinvenenthrombose, bei der eine
-          Schulter-Arm Massage durchgeführt werden kann.
-
-          <b>Schwangerschaft:</b> Massagenkönnen während der SChwangerschaft unter bestimmten Bedingungen durchgeführt werden, sollten jedoch vorher mit einem Arzt besprochen werden.
-
-          <b>Medikamenteneinnahme:</b> Bestimmte Medikamente, wie Blutverdünner, können das Risiko von Blutungen während einer Massage erhöhen. Es ist wichtig, den Therapeuten über alle eingenommenen Medikamente zu informieren.
-        </p>
+          Schulter-Arm Massage durchgeführt werden kann.</p>
+          
+          <p><b>Schwangerschaft:</b> Massagenkönnen während der Schwangerschaft unter bestimmten Bedingungen 
+            durchgeführt werden, sollten jedoch vorher mit einem Arzt besprochen werden.</p>
+          
+          <p><b>Medikamenteneinnahme:</b> Bestimmte Medikamente, wie Blutverdünner, können das Risiko von Blutungen 
+            während einer Massage erhöhen. Es ist wichtig, den Therapeuten über alle eingenommenen Medikamente zu 
+            informieren.</p>
 
         <div class="contradict-bold">
           <p>
-            <b
-              >Diese Liste ist nicht abschliessend.</b
-            >
+            <b>Diese Liste ist nicht abschliessend.</b>
           </p>
         </div>
 
         <p>Vor einer Massage empfehle ich, sich über mögliche Kontraindikationen 
-          zu informieren und bei gesundheitlichen Bedenken gegebenenfalls einen Arzt zu konsultieren,.</p>
+          zu informieren und bei gesundheitlichen Bedenken gegebenenfalls einen Arzt zu konsultieren.</p>
         
-        <p>
-          Sollten Sie in der Vergangenheit an einer der oben aufgelisteten
+        <p>Sollten Sie in der Vergangenheit an einer der oben aufgelisteten
           Krankheiten / Beschwerden gelitten haben oder aktuell darunter leiden,
           bitte ich Sie, mich bereits bei der Terminvereinbarung darüber zu informieren.
           Bitte setzen Sie mich spätestens während der Anamnese in Kenntnis über allfällige
@@ -144,25 +143,18 @@ import Footer from "../components/Footer.astro";
           <div>
             <h3>In den Praxisen in Kloten</h3>
             <div class="prices">
-              <p>Klassische Massage ab 128 CHF pro 60 Minuten</p>
-              <p>Entspannungsmassage ab 128 CHF pro 60 Minuten</p>
-              <p>Sportmassage ab 128 CHF pro 60 Minuten</p>
-              <p>Fussreflexzonen Massage ab 128 CHF pro 60 Minuten</p>
-              <p>Manuelle Lymphdrainage ab 128 CHF pro 60 Minuten</p>
-              <p>Rebalancing ab 128 CHF pro 60 Minuten</p>
+              <p>Massage 60 Minuten ab 128 CHF</p>
+              <p>Massage 30 Minuten ab 70 CHF</p>
             </div>
           </div>
           <div>
             <h3>Im Praxisraum in Weiach</h3>
             <div class="prices">
-              <p>Klassische Massage 100 CHF pro 60 Minuten</p>
-              <p>Entspannungsmassage 100 CHF pro 60 Minuten</p>
-              <p>Sportmassage 100 CHF pro 60 Minuten</p>
-              <p>Fussreflexzonen Massage ab 100 CHF pro 60 Minuten</p>
-              <p>Manuelle Lymphdrainage ab 100 CHF pro 60 Minuten</p>
-              <p>Rebalancing ab 100 CHF pro 60 Minuten</p>
+              <p>Massage 60 Minuten 110 CHF</p>
+              <p>Massage 30 Minuten 60 CHF</p>
             </div>
           </div>
+              <p>Hausbesuche ab 2 Personen – Preis auf Anfrage </p>
         </div>
         <div class="price-text">
           <p>
