--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -106,13 +106,14 @@ import Footer from "../components/Footer.astro";
 
         <h3>Relative Kontraindikationen</h3>
         
-          <p>Erfordern eine individuelle Beurteilung und können unter bestimmten Umständen behandelt werden.</p> 
+          <p>Relative Kontraindikationen erfordern eine individuelle Beurteilung. 
+            Unter bestimmten Voraussetzungen kann eine Massage dennoch durchgeführt werden, gegebenenfalls 
+            in angepasster Form oder mit Einschränkungen.</p> 
           </br>
-          <p>Mit diesem Begriff definiert man Situationen, in denen die Massage nur
-          eingeschränkt möglich ist, z.B. Beinvenenthrombose, bei der eine
-          Schulter-Arm Massage durchgeführt werden kann.</p>
+          <p>So kann beispielsweise bei einer Beinvenenthrombose auf eine Massage der betroffenen Region verzichtet 
+            werden, während eine Behandlung im Schulter-Arm-Bereich unter Umständen möglich ist.</p>
           </br>
-          <p><b>Schwangerschaft:</b> Massagenkönnen während der Schwangerschaft unter bestimmten Bedingungen 
+          <p><b>Schwangerschaft:</b> Massagen können während der Schwangerschaft unter bestimmten Bedingungen 
             durchgeführt werden, sollten jedoch vorher mit einem Arzt besprochen werden.</p>
           </br>
           <p><b>Medikamenteneinnahme:</b> Bestimmte Medikamente, wie Blutverdünner, können das Risiko von Blutungen 
@@ -121,7 +122,7 @@ import Footer from "../components/Footer.astro";
 
         <div class="contradict-bold">
           <p>
-            <b>Diese Liste ist nicht abschliessend.</b>
+            <b>Dies Auflistung ist nicht abschliessend.</b>
           </p>
         </div>
 
@@ -154,8 +155,9 @@ import Footer from "../components/Footer.astro";
               <p>Massage 30 Minuten 60 CHF</p>
             </div>
           </div>
-              <p>Hausbesuche ab 2 Personen – Preis auf Anfrage </p>
         </div>
+            <p>Hausbesuche ab 2 Personen – Preis auf Anfrage </p>
+            <br>
         <div class="price-text">
           <p>
             Die Behandlungsdauer versteht sich inklusive Vor- und Nachgespräch.
