--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -50,8 +50,8 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
 
       <div class="slide-show">
         <SlideshowEventList
-          slideImg1="/img/about-person-opt.jpg"
-          slideImg2="/img/about-process.jpg"
+          slideImg1="/img/about_portrait_elena.jpeg"
+          slideImg2="/img/about_massage.jpeg"
           slideImg3="/img/about-room2-opt.jpeg"
           slideImg4="/img/about-room8.jpg"
         />
