--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -126,7 +126,7 @@ import Footer from "../components/Footer.astro";
           </p>
         </div>
 
-        <p>Vor einer Massage empfehle ich, sich über mögliche Kontraindikationen 
+        <p>Vor einer Massage ist es ratsam, sich über mögliche Kontraindikationen 
           zu informieren und bei gesundheitlichen Bedenken gegebenenfalls einen Arzt zu konsultieren.</p>
         </br>
         <p>Sollten Sie in der Vergangenheit an einer der oben aufgelisteten
