--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
         <div class="images">
           <div class="pers-photos">
             <img
-              src="/img/about-person-opt.jpg"
+              src="/img/about_portrait_elena.jpeg"
               alt=""
               width="400"
               class="personal-photo"
@@ -25,7 +25,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
 
           <div class="proc-photos">
             <img
-              src="/img/about-process.jpg"
+              src="/img/about_massage.jpeg"
               alt=""
               width="380"
               class="process-photo"
