Austausch Foto & Raumfotos Web

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
         <div class="images">
           <div class="pers-photos">
             <img
-              src="/img/about_portrait_elena.jpeg"
+              src="/img/about_portrait_elena2.jpeg"
               alt=""
               width="400"
               class="personal-photo"
@@ -30,13 +30,27 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
               width="380"
               class="process-photo"
             />
+          <div class="studio-photos">
+            <img
+              src="/img/about-room2-opt.jpeg"
+              alt=""
+              width="380"
+              class="room-photo"
+            />
+            <img
+              src="/img/about-room8.jpg"
+              alt=""
+              width="380"
+              class="room-photo"
+            />
           </div>
+
         </div>
       </div>
 
       <div class="slide-show">
         <SlideshowEventList
-          slideImg1="/img/about_portrait_elena.jpeg"
+          slideImg1="/img/about_portrait_elena2.jpeg"
           slideImg2="/img/about_massage.jpeg"
           slideImg3="/img/about-room2-opt.jpeg"
           slideImg4="/img/about-room8.jpg"
