--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -122,7 +122,7 @@ import Footer from "../components/Footer.astro";
 
         <div class="contradict-bold">
           <p>
-            <b>Dies Auflistung ist nicht abschliessend.</b>
+            <b>Diese Auflistung ist nicht abschliessend.</b>
           </p>
         </div>
 
