--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,6 +14,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
       </div>
       <div class="image-section">
         <div class="images">
+         
           <div class="pers-photos">
             <img
               src="/img/about_portrait_elena2.jpeg"
@@ -30,7 +31,9 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
               width="380"
               class="process-photo"
             />
-          <div class="studio-photos">
+           </div>
+
+           <div class="studio-photos">
             <img
               src="/img/about-room2-opt.jpeg"
               alt=""
