--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,6 +20,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
               src="/img/about_portrait_elena2.jpeg"
               alt=""
               width="380"
+              height="400"
               class="personal-photo"
             />
           </div>
@@ -29,6 +30,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
               src="/img/about_massage.jpeg"
               alt=""
               width="380"
+              height="400"
               class="process-photo"
             />
            </div>
