--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,8 +19,8 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
             <img
               src="/img/about_portrait_elena2.jpeg"
               alt=""
-              width="380"
-              height="400"
+              width="100%"
+              height="400px"
               class="personal-photo"
             />
           </div>
@@ -29,8 +29,8 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
             <img
               src="/img/about_massage.jpeg"
               alt=""
-              width="380"
-              height="400"
+              width="100%"
+              height="400px"
               class="process-photo"
             />
            </div>
