--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
             <img
               src="/img/about_portrait_elena2.jpeg"
               alt=""
-              width="100%"
+              width="380px"
               height="400px"
               class="personal-photo"
             />
@@ -29,7 +29,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
             <img
               src="/img/about_massage.jpeg"
               alt=""
-              width="100%"
+              width="380px"
               height="400px"
               class="process-photo"
             />
