--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,42 +14,10 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
       </div>
       <div class="image-section">
         <div class="images">
-         
-          <div class="pers-photos">
-            <img
-              src="/img/about_portrait_elena2.jpeg"
-              alt=""
-              width="380px"
-              height="400px"
-              class="personal-photo"
-            />
-          </div>
-
-          <div class="proc-photos">
-            <img
-              src="/img/about_massage.jpeg"
-              alt=""
-              width="380px"
-              height="400px"
-              class="process-photo"
-            />
-           </div>
-
-           <div class="studio-photos">
-            <img
-              src="/img/about-room2-opt.jpeg"
-              alt=""
-              width="380"
-              class="room-photo"
-            />
-            <img
-              src="/img/about-room8.jpg"
-              alt=""
-              width="380"
-              class="room-photo"
-            />
-          </div>
-
+            <img src="/img/about_portrait_elena2.jpeg" width="380px"/>
+            <img src="/img/about_massage.jpeg" width="380px"/>
+            <img src="/img/about-room2-opt.jpeg" width="380px"/>
+            <img src="/img/about-room8.jpg" width="380px"/>
         </div>
       </div>
 
