--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
       <div class="image-section">
         <div class="images">
             <img src="/img/about_portrait_elena2.jpeg" width="380px"/>
-            <img src="/img/about_massage.jpeg" width="380px"/>
+            <img src="/img/about_massage_klein.jpeg" width="380px"/>
             <img src="/img/about-room2-opt.jpeg" width="380px"/>
             <img src="/img/about-room8.jpg" width="380px"/>
         </div>
