--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
       <div class="slide-show">
         <SlideshowEventList
           slideImg1="/img/about_portrait_elena2.jpeg"
-          slideImg2="/img/about_massage.jpeg"
+          slideImg2="/img/about_massage_klein.jpeg"
           slideImg3="/img/about-room2-opt.jpeg"
           slideImg4="/img/about-room8.jpg"
         />
