--- a/src/components/SlideshowEventList.astro
+++ b/src/components/SlideshowEventList.astro
@@ -120,6 +120,7 @@ const {slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        object-position: top center;
     }
 
     .btn {
