--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,8 +14,8 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
       </div>
       <div class="image-section">
         <div class="images">
-            <img src="/img/about_portrait_elena_mobile.jpeg" width="350px"/>
-            <img src="/img/about_massage_mobile_2.jpeg" width="350px"/>
+            <img src="/img/about_portrait_elena_mobile.jpeg" width="350px" height="450"/>
+            <img src="/img/about_massage_mobile_2.jpeg" width="350px" height="350"/>
             <img src="/img/about-room2-opt.jpeg" width="350px"/>
             <img src="/img/about-room8.jpg" width="350px"/>
         </div>
