--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -382,6 +382,26 @@ import { Icon } from "astro-icon";
         <p>- Amanda, 27. Juni 2025</p>
       </div>
     </div>
+     
+    <div class="slide-text">
+      <div>
+        <p>
+          Absolute Empfehlung! Tiefenentspannt, professionell und genau die richtige Mischung aus Erholung 
+          und neuer Energie. Ich komme definitiv wieder – pure Wohltat für Körper und Geist. 🙏
+        </p>
+        <p>- Vanessa, 20. Februar 2026</p>
+      </div>
+    </div>
+
+    <div class="slide-text">
+      <div>
+        <p>
+          Ich bin seit geraumer Zeit bei Dopamin und bin sehr zufrieden. Die Atmosphäre als auch die Massagen 
+          sind top. Nach den Behandlungen gehe ich immer sehr entspannt und zufrieden nach Hause. Ich kann es nur empfehlen.
+        </p>
+        <p>- Claudia, 23. Februar 2026</p>
+      </div>
+    </div>
 
     <!-- <div class="slide-text no-review">
       <p>Hier könnte Ihre Bewertung sein</p>
