--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -20,6 +20,28 @@ const dataDesktop = json;
     <div class="slide-text">
       <div>
         <p>
+          Ich bin seit geraumer Zeit bei Dopamin und bin sehr zufrieden. Die Atmosphäre als auch die Massagen 
+          sind top. Nach den Behandlungen gehe ich immer sehr entspannt und zufrieden nach Hause. Ich kann es nur empfehlen.
+        </p>
+        <p>- Claudia, 23. Februar 2026</p>
+      </div>
+    </div>
+
+  <div class="slide">
+    <div class="slide-text">
+      <div>
+        <p>
+          Absolute Empfehlung! Tiefenentspannt, professionell und genau die richtige Mischung aus Erholung 
+          und neuer Energie. Ich komme definitiv wieder – pure Wohltat für Körper und Geist. 🙏
+        </p>
+        <p>- Vanessa, 20. Februar 2026</p>
+      </div>
+    </div>
+
+  <div class="slide">
+    <div class="slide-text">
+      <div>
+        <p>
           Elena ist super kompetent in ihrem Gebiet und über die Massage hinaus
           gibt sie wertvoll Tipps. Sehr geschätzt, ich buch wieder Termine bei
           ihr.
