--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -383,7 +383,9 @@ import { Icon } from "astro-icon";
       </div>
     </div>
      
-    <div class="slide-text">
+   <!-- slide 17 -->
+    <div class="slide-tablet">
+     <div class="slide-text">
       <div>
         <p>
           Absolute Empfehlung! Tiefenentspannt, professionell und genau die richtige Mischung aus Erholung 
