--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -327,7 +327,7 @@ const dataDesktop = json;
     /* max-width: 800px; */
     min-height: 370px;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
   }
 
   .slide {
